# white-lights

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
api/: main.py
data/: README.md  labels.example.csv
docs/: ARCHITECTURE.md  DEPLOY.md  HANDOFF.md  ROADMAP.md
eval/: validate.py
tests/: conftest.py  test_api.py  test_bench.py  test_competition.py  test_deadlift.py  test_depth.py  test_eval.py  test_filters.py  test_fusion.py  test_judges.py  test_live.py  test_pipeline.py  test_pose.py  test_posture.py  test_reps.py  test_smoothing.py
web/: HANDOFF-UI.md  history.html  index.html  landing.html  live.html  stats.html  upload.html
whitelights/: __init__.py  bench.py  deadlift.py  depth.py  filters.py  fusion.py  judges.py  live.py  pipeline.py  pose.py  posture.py  reps.py  smoothing.py  types.py
